--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </form>
         <div class="weather-status text-white text-center">
-            <img id="image" src="https://openweathermap.org/img/wn/02d@2x.png" alt="">
+            <img id="Image" src="https://openweathermap.org/img/wn/02d@2x.png" alt="">
             <h1 id="city">Dhaka</h1>
             <h3><span id="temp">38.06</span>&deg;C</h3>
             <h1 id="status" class="lead">Clouds</h1>
